--- a/src/sass/_task123.scss
+++ b/src/sass/_task123.scss
@@ -415,6 +415,12 @@ h3{
     .close {
         right: -850px;
     }
+    .modal-body {
+        align-items: flex-start;
+    }
+    .movie-stats {
+        padding-bottom: 15px;
+    }
 
     
 }
