Update modal markup & style

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -15,7 +15,7 @@
                     <div class="labels">
                         <span class="label">Vote/Votes:</span>
                         <span class="label">Popularity:</span>
-                        <span class="label">Title:</span>
+                        <span class="label">Original Title:</span>
                         <span class="label">Genre:</span>
                     </div>
                     <div class="stats">
