--- a/src/sass/_task123.scss
+++ b/src/sass/_task123.scss
@@ -336,6 +336,8 @@ h3{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    font-size: 12px;
+    gap: 20px;
 }
 
 #modal-overview {
@@ -346,17 +348,18 @@ h3{
 }
 #addToWatchedBtn,
 #addToQueuBtn {
-    padding: 20px;
     text-transform: uppercase;
     font-weight: 400;
-    border: 2px solid grey;
-    border-radius: 25px;
+    border-radius: 5px;
+    width: auto;
+    height: 44px;
 }
 
 #addToWatchedBtn:hover,
 #addToQueuBtn:hover {
     background-color: #FF6B01;
     color: white;
+    border-color: none;
     
 }
 
