--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TASK 13-15</title>
-    <link rel="stylesheet" href="/src/sass/_library.scss" />
+
+    <title>Filmoteka - js-teamproject-team3 </title>
+    <link rel="stylesheet" href="/src/sass/index.scss"/>
+    <!-- <script type="module" src="./index.js"></script> -->
+    <!-- <link rel="stylesheet" href="/src/css/styles.css" /> -->
+
+    <title>Watched and Queue</title>
+    <!-- <link rel="stylesheet" href="/src/sass/_library.scss" /> -->
     <!-- <script type="module" src="./index.js"></script> -->
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,34 +39,16 @@
         </div>
 
         <div class="header-bottom">
-            <form class="searchform" id="search-form">
-                <input type="text" name="query" autocomplete="off" placeholder="Search for movies..." id="search-input">
-                <button class="search-button" type="submit"><i class="fa fa-search"></i></button>
-            </form>
-            <img class="srcline" src="/src/images/Line 1.png" alt="line">
+            <form class="lib-buttons" id="lib-buttons">
+                <button class="watched" id="watched-btn" type="submit">WATCHED</button>
+                <button class="queue" id="queue-btn" type="submit">QUEUE</button>
+            </form>  
         </div>
 
     </header>
 
     <include src="partials/task21_loader.html"></include>
     <main class="main-content" id="main">
-
-        <section>
-            <div class="watchedmovies" id="wtched-movies">
-                <button id="watched-btn" class="button-with-heading">
-                    <span class="heading-text">Watched Movies</span>
-                </button>
-                <button id="queue-btn" class="button-with-heading">
-                    <span class="heading-text">Queue</span>
-                </button>
-                <div id="watched-films-list"></div>
-
-            </div>
-
-            <!-- Container for displaying movies -->
-            <div id="movies-list"></div>
-        </section>
-
         <section class="section">
             <div class="container">
                 <div class="gallery">
@@ -107,8 +95,10 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
     <include src="partials/task4_footer.html"></include>
-    <script src="/src/index.js" type="module"></script>
-
+    <!-- <srcipt src="/src/js/script.js"></srcipt> -->
+    <script src="/src/js/api.js" type="module"></script>
+    <script src="/src/js/library.js" type="module"></script>
+    <script? src="/src/js/pagination.js" type="module"></script>
 </body>
 
 </html>
