updated pagination markup

--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -30,3 +30,8 @@
 
 }
 
+.pagination-button.previous-page, .next-page {
+    background-color: rgba(247, 247, 247, 1);
+    border-radius: 5px;
+
+}
