--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,6 +1,10 @@
 <div class="pagination">
     <button class="pagination-button previous-page" type="submit" id="prev">
-        <img src="/src/images/arrow-right.png" alt="previous">
+        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12.6666 8H3.33325" stroke="black" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M7.99992 12.6668L3.33325 8.00016L7.99992 3.3335" stroke="black" stroke-width="1.33333"
+                stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
     </button>
     <button class="pagination-button first-page" type="submit">...</button>
 
@@ -8,7 +12,11 @@
 
     <div id="current"></div>
     <button class="pagination-button last-page" type="submit">...</button>
-    <button class="pagination-button next-page" type="submit" id="next">
-       <img src="/src/images/arrow-left.png" alt="next">
+    <button class="next-page" type="submit" id="next">
+        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M3.33341 8H12.6667" stroke="black" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M8.00008 12.6668L12.6667 8.00016L8.00008 3.3335" stroke="black" stroke-width="1.33333"
+                stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
     </button>
 </div>
