--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -19,10 +19,7 @@
 
 <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <!-- <include src="./partials/example.html"></include> -->
-
-
-
+  
     <header class="header">
         <div class="header-top">
             <div class="header-top-left">
@@ -43,8 +40,8 @@
         <div class="header-bottom">
 
             <form class="lib-buttons" id="lib-buttons">
-                <button class="watched" type="submit">WATCHED</button>
-                <button class="queue" type="submit">QUEUE</button>
+                <button class="watched" id="watched-btn" type="submit">WATCHED</button>
+                <button class="queue" id="queue-btn" type="submit">QUEUE</button>
             </form>  
         </div>
 
