--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -105,6 +105,7 @@
 
     <include src="partials/task4_footer.html"></include>
 
+    <script src="/src/js/library.js" type="module"></script>
 
 </body>
 
