--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -102,7 +102,7 @@
     </div>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-
+    <!-- <include src="partials/modal.html"></include> -->
     <include src="partials/task4_footer.html"></include>
 
     <script src="/src/js/library.js" type="module"></script>
