--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="/src/css/styles.css" /> -->
 
     <title>TASK 13-15</title>
-    <!-- <link rel="stylesheet" href="/src/sass/_library.scss" /> -->
+    <link rel="stylesheet" href="/src/sass/_library.scss" />
     <!-- <script type="module" src="./index.js"></script> -->
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
 
@@ -106,6 +106,7 @@
     <include src="partials/task4_footer.html"></include>
 
     <script src="/src/js/library.js" type="module"></script>
+    <script src="/src/js/script.js" type="module"></script>
 
 </body>
 
