--- a/src/sass/_library.scss
+++ b/src/sass/_library.scss
@@ -244,17 +244,18 @@ main {
 
 .lib-info{
     color: orange;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
+    gap: 5px;
 }
 
 .avg {
     background-color: orange;
-    padding: 5px 15px;
-    border-radius: 15px;
+    padding: 5px 10px;
+    border-radius: 10px;
     color: white;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 .lib-movie-details {
